--- a/src/pages/login/index.module.css
+++ b/src/pages/login/index.module.css
@@ -27,6 +27,7 @@
     padding: 8px 16px;
     border: none;
     color: #FFFFFF;
+    width: 400px;
 }
 
 .fieldWrapper {
@@ -61,4 +62,10 @@
     font-size: 16px;
     border-radius: 10px;
     padding: 10px;
+}
+
+.logo {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
